--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
-    remote = myremote
-['remote "myremote"']
-    url = ../tmp/dvc
+    remote = newremote
+['remote "newremote"']
+    url = /tom/jerry
