--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,5 +5,7 @@ stages:
     cmd: python src/stages/featurize.py
   data_split:
     cmd: python src/stages/data_split.py
+  train:
+    cmd: python src/stages/train.py
   evaluate:
     cmd: python src/stages/evaluate.py
