--- a/dvc.yaml
+++ b/dvc.yaml
@@ -7,5 +7,6 @@ stages:
     cmd: python src/stages/data_split.py
   train:
     cmd: python src/stages/train.py
+    outs: models/model.joblib
   evaluate:
     cmd: python src/stages/evaluate.py
